@@ -1206,7 +1206,6 @@ PKL_PHASE_BEGIN_HANDLER (pkl_typify1_ps_struct)
   pkl_ast_node node = PKL_PASS_NODE;
   pkl_ast_node type;
   pkl_ast_node t, struct_field_types = NULL;
-  int type_complete = 1;
 
   /* Build a chain with the types of the struct fields.  */
   for (t = PKL_AST_STRUCT_FIELDS (node); t; t = PKL_AST_CHAIN (t))
@@ -1223,8 +1222,6 @@ PKL_PHASE_BEGIN_HANDLER (pkl_typify1_ps_struct)
 
       struct_field_types = pkl_ast_chainon (struct_field_types,
                                             struct_type_field);
-      if (!PKL_AST_TYPE_COMPLETE (PKL_AST_TYPE (t)))
-        type_complete = 0;
     }
 
   /* Build the type of the struct.  */
@@ -1237,7 +1234,7 @@ PKL_PHASE_BEGIN_HANDLER (pkl_typify1_ps_struct)
                                    0 /* pinned */,
                                    0 /* union */);
   PKL_AST_TYPE (node) = ASTREF (type);
-  PKL_AST_TYPE_COMPLETE (type) = type_complete;
+  PKL_PASS_RESTART = 1;
 }
 PKL_PHASE_END_HANDLER
 
